--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "desafio_clase_44",
+  "name": "proyecto_final",
   "version": "1.0.0",
-  "description": "Implementacion de rutas de subida de documentos y mejora de usuario Premium",
+  "description": "Comercio Electrónico Curso Programación Backeend curso 55565",
   "main": "app.js",
   "scripts": {
     "test": "node ./src/app.js -m staging",
     "start": "node ./src/app.js -m production",
-    "dev": "nodemon ./src/app.js -m development"
+    "dev": "nodemon ./src/app.js -m development",
+    "devmocha": "nodemon ./src/app.js -m mocha",
+    "dev-test": "npm-run-all -p devmocha  test-mocha",
+    "test-mocha": "npx mocha --exit"
   },
   "author": "Omar D agostino",
   "license": "ISC",
@@ -42,8 +45,12 @@
   "devDependencies": {
     "chai": "^4.3.10",
     "chai-http": "^4.4.0",
+    "cross-spawn": "^7.0.3",
+    "form-data": "^4.0.0",
+    "kill-port": "^2.0.1",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
     "supertest": "^6.3.3",
     "supertest-session": "^5.0.1"
   }
