--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node ./src/app.js -m staging",
     "start": "node ./src/app.js -m production",
-    "dev": "nodemon ./src/app.js -m development",
+    "dev": "nodemon ./src/app.js -m development -l sp",
     "devmocha": "nodemon ./src/app.js -m mocha",
     "dev-test": "npm-run-all -p devmocha  test-mocha",
     "test-mocha": "npx mocha --exit"
